Fixed the spacing around hyperlinks in transformation descriptions so that it doesn't jump when the more/less link is clicked.

--- a/records/app/src/main/scss/transformation.scss
+++ b/records/app/src/main/scss/transformation.scss
@@ -24,6 +24,12 @@
 }
 .transformation-description-wrapper {
     -fx-padding: 0 0 1em 0;
+    .hyperlink {
+       -fx-padding: 0 0.5em 0 0.5em;
+       -fx-label-padding: 0;
+       -fx-background-insets: 0;
+       -fx-border-width: 0;
+    }
 }
 .transformation-description {
     -fx-fill: grey;
